Trying to fix screen on mobile

--- a/style.scss
+++ b/style.scss
@@ -2,12 +2,13 @@ $enable-gradients:true;
 
 body {
     background-image: linear-gradient(to bottom, rgb(91, 183, 245), rgb(67, 47, 182));
+    background-repeat: no-repeat;
 }
 
 // .space configuration -----------------------
 
 $bigwid: 30cm;
-$smallwid: 15cm;
+$smallwid: 20cm;
 $uppermargin: 0;
 $bgcolor: lightblue;
 
